# pf-archetype-validator

./: .gitignore  CMakeLists.txt  README.md  build-resources.py
resources/: alchemist.csv  brawler.csv  cavalier.csv  druid.csv  magus.csv  medium.csv  monk.csv  ninja.csv  oracle.csv  psychic.csv  ranger.csv  slayer.csv  warpriest.csv  witch.csv
resources/classes/: antipaladin.csv  barbarian.csv  cavalier.csv  fighter.csv  gunslinger.csv  inquisitor.csv  kineticist.csv  monk.csv  paladin.csv  rogue.csv  shaman.csv  shifter.csv  skald.csv  summoner.csv  swashbuckler.csv  unchained monk.csv  wizard.csv
resources/icons/: appicon.rc  d20-Normal.xpm
source/: archetype-table.cpp  archetype-table.h  archetype.cpp  archetype.h  main-window.cpp  main-window.h  main.cpp  main.h  pf-class.cpp  pf-class.h  pf-data.h  replacement-status.h
validator/: cleanup.py  cli.py  compare.py  insert.py  validator.py
validator/data/: alchemist.csv  antipaladin.csv  arcanist.csv  barbarian.csv  bard.csv  bloodrager.csv  brawler.csv  cavalier.csv  cleric.csv  druid.csv  fighter.csv  gunslinger.csv  hunter.csv  inquisitor.csv  investigator.csv  kineticist.csv  magus.csv  medium.csv  mesmerist.csv  monk.csv  ninja.csv  occultist.csv  omdura.csv  oracle.csv  paladin.csv  psychic.csv  ranger.csv  rogue.csv  samurai.csv  shaman.csv  shifter.csv  skald.csv  slayer.csv  sorcerer.csv  spiritualist.csv  summoner.csv  swashbuckler.csv  vigilante.csv  warpriest.csv  wizard.csv
